Added "buttons-container", two buttons and css rules to center everything

--- a/style.css
+++ b/style.css
@@ -13,3 +13,17 @@
 .cell.wasHovered{
     background-color: red;
 }
+
+#grid-container{
+    flex-direction: column;
+    align-items: center;
+}
+
+#grid-container, #buttons-container{
+    display: flex;
+}
+
+#buttons-container{
+    justify-content: center;
+    gap: 20px;
+}
