--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 body{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    margin: 0px;
 }
 
 .row{
     display: flex;
 }
 
-.cell{
+/*.cell{
     height: 100px;
     width: 100px;
     border: solid 1px black;
     margin-right: -1px;
     margin-bottom: -1px;
-}
+}*/
 
 .cell.wasHovered{
     background-color: red;
@@ -23,6 +24,7 @@ body{
 #grid-container{
     flex-direction: column;
     align-items: center;
+    border: solid 1px black;
 }
 
 #grid-container, #buttons-container{
