--- a/style.css
+++ b/style.css
@@ -1,30 +1,30 @@
+html{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    background-color: rgb(14, 52, 70);
+}
+
 body{
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 0px;
+    justify-content: space-between;
+    width: 100%;
+    color: rgb(196, 255, 250);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .row{
     display: flex;
 }
 
-/*.cell{
-    height: 100px;
-    width: 100px;
-    border: solid 1px black;
-    margin-right: -1px;
-    margin-bottom: -1px;
-}*/
-
-.cell.wasHovered{
-    background-color: red;
-}
-
 #grid-container{
     flex-direction: column;
     align-items: center;
     border: solid 1px black;
+    background-color: white;
 }
 
 #grid-container, #buttons-container{
@@ -32,6 +32,67 @@ body{
 }
 
 #buttons-container{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 20px;
+}
+
+#left-div{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-self: flex-start;
+    flex: 1 0 0;
+    margin-right: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: rgb(18, 60, 80);
+}
+
+#right-div{
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 0;
+}
+
+h1{
+    background-color: rgb(6, 25, 34);
+    text-align: center;
+    padding: 10px;
+    padding-right: 20px;
+    margin-top: 0px;
+    border-bottom-right-radius: 10px;
+}
+
+ul{
+    padding-left: 10px;
+}
+
+h2,li{
+    margin-left: 10px;
+}
+
+li{
+    margin-bottom: 10px;
+}
+
+button {
+    font-size: 18px;
+    border: 1px solid white;
+    background-color: rgb(27, 89, 117);
+    color: white;
+    border-radius: 7px;
+    padding: 5px;
+    width: 150px;
+    box-shadow: 0 8px 16px 0 rgb(10, 34, 46)/*, 0 8px 16px 0 black*/;
+    transition: color 0.5s;
+}
+
+button:active {
+    background-color: white;
+    color: rgb(27, 89, 117);
+    border: 1px solid rgb(27, 89, 117);
 }
